--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "element-ui": "^2.15.14",
     "vue": "^2.7.15",
     "vue-router": "^3.0.1"
   },
